employee entity and repository added

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppConnectionString": "server=(localdb)\\MSSQLLocalDB;database=BouwJeBlutDB;Trusted_Connection=true"
+  }
 }
